Fixed position issue. Added hide in x scrollbar position

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
-@import './styles/variables.scss'; 
-@import './styles/global.scss';
+@import "./styles/variables.scss";
+@import "./styles/global.scss";
 
 .App {
+    overflow-x: hidden;
     text-align: center;
     height: 600px;
     min-width: 362px;
     overflow-y: auto;
 }
-
